--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,11 @@
     }
     /* main Styles */
     
-    .main-content {}
+    .main-content,
+    header,
+    #layout {
+        max-width: 1920px;
+    }
     
     header {
         display: flex;
@@ -58,7 +62,7 @@
     }
     
     .container img {
-        margin: auto;
+        margin: 20px auto;
         width: 100%;
         height: 350px;
     }
@@ -122,7 +126,12 @@
     .photogallery img {
         margin: auto;
         border-radius: 5px;
+        transition: all .5s;
+
     }
+    .photogallery img:hover{
+    transform: scale(1.1) ;
+  }
     
     .photogallery a {
         display: flex;
@@ -142,7 +151,7 @@
         }
         .container img {
             margin: auto;
-            width: 80%;
+            width: 550px;
             height: 350px;
         }
         p{max-width: 600px;}
@@ -153,4 +162,9 @@
         .photogallery {
             align-content: space-between;
             width: 980px;
+        }
+        .container img {
+           width: 600px;
+            width: 800px;
+            height: 500px;
         }
