ready to review and submit!

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,179 +1,187 @@
-        *,
-    *:before,
-    *:after {
-        -moz-box-sizing: border-box;
-        -webkit-box-sizing: border-box;
-        box-sizing: border-box;
-    }
-    /* main Styles */
-    
-    .main-content,
-    header,
-    #layout {
-        max-width: 1920px;
-    }
-    
-    header {
-        display: flex;
-        justify-content: center;
-        height: 100px;
-        background: #fff;
-        width: 100%;
-        position: fixed;
-    }
-    
-    header input {
-        margin: auto;
-        width: 280px;
-        height: auto;
-        padding: 16px;
-        border: 2px solid #C9EBFF;
-    	border-radius: 5px;
-        box-shadow: 0 0 20px 2px #C7DAEC;
-    }
-    
-    body {
-        font-family: 'Poiret One', cursive;
-        color: #222;
-        background: #C7DAEC;
-        width: 100%;
-    }
-    /* overlay Styles */
-    
-    #overlay {
-        display: none;
-        position: fixed;
-        background-color: rgba(0, 0, 0, 0.6);
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        text-align: center;
-        z-index: 99;
-    }
-    
-    .container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        height: 60%;
-        margin: auto;
-        margin-bottom: 20px;
-    }
-    
-    .container img {
-        margin: 20px auto;
-        width: 100%;
-        height: 350px;
-    }
-    .video{
-        margin: auto;
-        width: 100%;
-        height: 350px;
-    }
-    
-    #close {
-        display: block;
-        height: 22px;
-        width: 25px;
-        background-color: red;
-        color: #fff;
-        position: absolute;
-        top: 15px;
-        right: 25px;
-        cursor: pointer;
-        text-align: center;
-        border-radius: 10px;
-        o
-    }
-    
-    p {
-
-        font-size: 1.3em;
-        font-weight: 700;
-        color: #F7F5FF;
-        margin: auto;
-    }
-    
-    .container {
-        display: flex;
-        flex-direction: column;
-        height: 80%;
-        margin: auto;
-        margin-bottom: 20px;
-    }
-    
-    .next,
-    .previous {
-        cursor: pointer;
-        width: 40px;
-        height: 40px;
-        font-size: 4em;
-        color: #fff;
-        margin: auto;
-    }
-    /* Gallery Styles */
-    
-    .main-content {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    
-    .photogallery {
-        display: flex;
-        flex-direction: column;
-        width: 90%;
-        margin: auto;
-        margin-top: 100px;
-    }
-    
-    .photogallery img {
-        margin: auto;
-        border-radius: 5px;
-        transition: all .5s;
-
-    }
-    .photogallery img:hover{
-    transform: scale(1.1) ;
-  }
-    
-    .photogallery a {
-        display: flex;
-        margin: 20px 0;
-    }
-    
-    @media screen and (min-width: 760px) { /*regular tablets & smaller desktops*/
-
-        .photogallery {
-            flex-direction: row;
-            flex-wrap: wrap;
-            align-content: space-between;
-            justify-content: space-between;
+            *,
+        *:before,
+        *:after {
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
         }
-        .container {
-            flex-direction: row;
+        /* main Styles */
+        
+        .main-content,
+        header,
+        #layout {
+            max-width: 1920px;
         }
-        .container img,
-        .video {
+        
+        header {
+            display: flex;
+            justify-content: center;
+            height: 100px;
+            background: #fff;
+            width: 100%;
+            position: fixed;
+            z-index: 50;
+        }
+        
+        header input {
             margin: auto;
-            width: 550px;
+            width: 280px;
+            height: auto;
+            padding: 16px;
+            border: 2px solid #C9EBFF;
+            border-radius: 5px;
+            box-shadow: 0 0 20px 2px #C7DAEC;
+        }
+        
+        body {
+            font-family: 'Poiret One', cursive;
+            color: #222;
+            background: #C7DAEC;
+            width: 100%;
+        }
+        /* overlay Styles */
+        
+        #overlay {
+            display: none;
+            position: fixed;
+            background-color: rgba(0, 0, 0, 0.6);
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            text-align: center;
+            z-index: 99;
+        }
+        
+        .container {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            height: 60%;
+            margin: auto;
+            margin-bottom: 20px;
+        }
+        
+        .container img {
+            margin: 20px auto;
+            width: 100%;
             height: 350px;
         }
-
-        p{max-width: 600px;}
-    }
-    
-    @media screen and (min-width: 1024px) {
-        /*larger desktops*/
-        .photogallery {
-            align-content: space-between;
-            width: 980px;
-        }
-        .container img,
+        
         .video {
-           
-            width: 800px;
-            height: 500px;
+            margin: auto;
+            width: 100%;
+            height: 350px;
         }
-     
+        
+        #close {
+            display: block;
+            height: 22px;
+            width: 25px;
+            background-color: red;
+            color: #fff;
+            position: absolute;
+            top: 15px;
+            right: 25px;
+            cursor: pointer;
+            text-align: center;
+            border-radius: 10px;
+            
+        }
+        
+        p {
+            font-size: 1.3em;
+            font-weight: 700;
+            color: #F7F5FF;
+            margin: auto;
+        }
+        
+        .container {
+            display: flex;
+            flex-direction: column;
+            height: 80%;
+            margin: auto;
+            margin-bottom: 20px;
+        }
+        
+        .next,
+        .previous {
+            cursor: pointer;
+            width: 40px;
+            height: 40px;
+            font-size: 4em;
+            color: #fff;
+            margin: auto;
+        }
+        /* Gallery Styles */
+        
+        .main-content {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
+        
+        .photogallery {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            width: 90%;
+            margin: auto;
+            margin-top: 100px;
+        }
+        
+        .photogallery img {
+            margin: auto;
+            border-radius: 5px;
+            transition: all .5s;
+        }
+        
+        .photogallery img:hover {
+            transform: scale(1.1);
+        }
+        
+        .photogallery a {
+            display: flex;
+            margin: 20px 0;
+        }
+            
+
+            /*regular tablets & smaller desktops*/
+
+
+
+        @media screen and (min-width: 760px) {
+            
+            .photogallery {
+                flex-direction: row;
+                flex-wrap: wrap;
+                align-content: space-between;
+                justify-content: space-between;
+            }
+            .container {
+                flex-direction: row;
+            }
+            .container img,
+            .video {
+                margin: auto;
+                width: 550px;
+                height: 350px;
+            }
+            p {
+                max-width: 600px;
+            }
+        }
+            /*larger desktops*/
+
+        @media screen and (min-width: 1024px) {
+            
+            .photogallery {
+                align-content: space-between;
+                width: 980px;
+            }
+            .container img,
+            .video {
+                width: 800px;
+                height: 500px;
+            }
+          }  
